# service/api/api-handler.go
@@ -17,7 +17,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/users/:userid/photos/", rt.wrap(rt.uploadPhoto))
 	rt.router.DELETE("/users/:userid/photos/:photoid", rt.wrap(rt.deletePhoto))
 	rt.router.GET("/users/:userid/photos/:photoid", rt.wrap(rt.getPhoto))
-	rt.router.PUT("/users/:userid/photos/:photoid/comments/:commentid", rt.wrap(rt.commentPhoto))
+	rt.router.PUT("/users/:userid/photos/:photoid/comments/:useridputting", rt.wrap(rt.commentPhoto))
 	rt.router.DELETE("/users/:userid/photos/:photoid/comments/:commentid", rt.wrap(rt.uncommentPhoto))
 	rt.router.PUT("/users/:userid/photos/:photoid/like/:likeid", rt.wrap(rt.likePhoto))
 	rt.router.DELETE("/users/:userid/photos/:photoid/like/:likeid", rt.wrap(rt.unlikePhoto))
